<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_1"
        />
    <EditText
        android:id="@+id/editNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        />
    <TextView
        android:id="@+id/txt_2_id"
        android:layout_width="@dimen/txt_idade"
        android:layout_height="wrap_content"
        android:text="@string/txt_2"
        />
    <EditText
        android:id="@+id/editIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btn_1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_1"
        />
    <!--<TextView
        android:id="@+id/txt_2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_2"
        />-->
</androidx.appcompat.widget.LinearLayoutCompat>